--- a/release/ml_user_tests/ml_user_tests.yaml
+++ b/release/ml_user_tests/ml_user_tests.yaml
@@ -3,21 +3,21 @@
     app_config: horovod/app_config.yaml
     compute_template: horovod/compute_tpl.yaml
 
+
+  driver_setup: horovod/driver_setup_latest.sh
+
   run:
     use_connect: True
     autosuspend_mins: 10
     timeout: 1200
-    prepare:
-      - sudo apt update
-      - sudo apt -y install build-essential
-      - pip install cmake
-      - pip install -r horovod/base_driver_reqs.txt
     script: python horovod/horovod_user_test.py
 
 - name: horovod_user_test_master
   cluster:
     app_config: horovod/app_config_master.yaml
     compute_template: horovod/compute_tpl.yaml
+
+  driver_setup: horovod/driver_setup_master.sh
 
   run:
     use_connect: True
@@ -72,6 +72,8 @@
     app_config: ray-lightning/app_config.yaml
     compute_template: ray-lightning/compute_tpl.yaml
 
+  driver_setup: ray-lightning/driver_setup.sh
+
   run:
     use_connect: True
     autosuspend_mins: 10
@@ -83,6 +85,9 @@
   cluster:
     app_config: ray-lightning/app_config_master.yaml
     compute_template: ray-lightning/compute_tpl.yaml
+
+
+  driver_setup: ray-lightning/driver_setup.sh
 
   run:
     use_connect: True
