--- a/python/requirements/ml/requirements_dl.txt
+++ b/python/requirements/ml/requirements_dl.txt
@@ -1,6 +1,7 @@
 # These requirements are used for the CI and CPU-only Docker images so we install CPU only versions of torch.
 # For GPU Docker images, you should install requirements_ml_docker.txt instead.
 
+# TODO(amogkam): Remove after https://github.com/tensorflow/tensorflow/issues/52922 is fixed.
 keras==2.6.0
 tensorflow==2.6.0
 tensorflow-probability==0.14.0
