--- a/java/BUILD.bazel
+++ b/java/BUILD.bazel
@@ -78,6 +78,7 @@ define_java_module(
         "@maven//:com_google_code_gson_gson",
         "@maven//:com_google_guava_guava",
         "@maven//:com_google_protobuf_protobuf_java",
+        "@maven//:com_google_protobuf_protobuf_java_util",
         "@maven//:com_lmax_disruptor",
         "@maven//:com_typesafe_config",
         "@maven//:commons_io_commons_io",
