--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -105,6 +105,15 @@ py_test_module_list(
 py_test_module_list(
   files = [
     "test_autoscaler_fake_multinode.py",  # Temporarily owned by core.
+  ],
+  size = "medium",
+  extra_srcs = SRCS,
+  tags = ["exclusive", "team:core"],
+  deps = ["//:ray_lib"],
+)
+
+py_test_module_list(
+  files = [
     "test_args.py",
     "test_asyncio_cluster.py",
     "test_asyncio.py",
