--- a/release/long_running_tests/long_running_tests.yaml
+++ b/release/long_running_tests/long_running_tests.yaml
@@ -15,7 +15,7 @@
 
 - name: apex
   cluster:
-    app_config: app_config.yaml
+    app_config: ../rllib_tests/app_config.yaml
     compute_template: tpl_cpu_3.yaml
 
   run:
@@ -31,7 +31,7 @@
 
 - name: impala
   cluster:
-    app_config: app_config_np.yaml
+    app_config: ../rllib_tests/app_config.yaml
     compute_template: tpl_cpu_1.yaml
 
   run:
@@ -140,7 +140,7 @@
 
 - name: pbt
   cluster:
-    app_config: app_config_np.yaml
+    app_config: ../rllib_tests/app_config.yaml
     compute_template: tpl_cpu_1.yaml
 
   run:
