[Release] Increase node memory by 2X in many_ppo test. (#19591)

--- a/release/long_running_tests/long_running_tests.yaml
+++ b/release/long_running_tests/long_running_tests.yaml
@@ -78,11 +78,11 @@
 - name: many_ppo
   cluster:
     app_config: app_config.yaml
-    compute_template: tpl_cpu_3.yaml
+    compute_template: many_ppo.yaml
 
   run:
     timeout: 86400
-    prepare: python wait_cluster.py 3 600
+    prepare: python wait_cluster.py 1 600
     script: python workloads/many_ppo.py
     long_running: True
 
