--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2201,6 +2201,12 @@ pyx_library(
     ),
     deps = [
         "//streaming:streaming_lib",
+        "@com_github_grpc_grpc//:grpc++",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/synchronization",
+        "@com_google_absl//absl/time",
     ],
 )
 
