--- a/release/golden_notebook_tests/golden_notebook_tests.yaml
+++ b/release/golden_notebook_tests/golden_notebook_tests.yaml
@@ -54,3 +54,18 @@
     autosuspend_mins: 10
     timeout: 1200
     script: python workloads/torch_tune_serve_test.py
+
+- name: rllib_tune_serve_test
+  owner:
+    mail: "jungong@anyscale.com"
+    slack: "@team_ml"
+
+  cluster:
+    app_config: rllib_tune_serve_app_config.yaml
+    compute_template: compute_tpl.yaml
+
+  run:
+    use_connect: True
+    autosuspend_mins: 10
+    timeout: 1200
+    script: python workloads/rllib_tune_serve_test.py
