--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -157,6 +157,7 @@ cc_test(
         "counter.so",
         "plus.so",
         "ray_cpp_pkg",
+        "src/ray/test/cluster/ray-test-SNAPSHOT.jar",
         "src/ray/test/cluster/test_cross_language_invocation.py",
     ],
     linkstatic = True,
