--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -774,7 +774,7 @@
   group: Tune cloud tests
   working_dir: tune_tests/cloud_tests
 
-  stable: false
+  stable: true
 
   legacy:
     test_name: aws_no_sync_down
@@ -803,7 +803,7 @@
   group: Tune cloud tests
   working_dir: tune_tests/cloud_tests
 
-  stable: false
+  stable: true
 
   legacy:
     test_name: aws_ssh_sync
@@ -832,7 +832,7 @@
   group: Tune cloud tests
   working_dir: tune_tests/cloud_tests
 
-  stable: false
+  stable: true
 
   legacy:
     test_name: aws_durable_upload
@@ -922,7 +922,7 @@
   group: Tune cloud tests
   working_dir: tune_tests/cloud_tests
 
-  stable: false
+  stable: true
 
   legacy:
     test_name: gcp_k8s_no_sync_down
@@ -950,7 +950,7 @@
   group: Tune cloud tests
   working_dir: tune_tests/cloud_tests
 
-  stable: false
+  stable: true
 
   legacy:
     test_name: gcp_k8s_ssh_sync
@@ -978,7 +978,7 @@
   group: Tune cloud tests
   working_dir: tune_tests/cloud_tests
 
-  stable: false
+  stable: true
 
   legacy:
     test_name: gcp_k8s_durable_upload
