--- a/release/serve_tests/compute_tpl_8_cpu_autoscaling.yaml
+++ b/release/serve_tests/compute_tpl_8_cpu_autoscaling.yaml
@@ -6,14 +6,14 @@ max_workers: 130
 
 head_node_type:
     name: head_node
-    # 16 cpus, x86, 64G mem, 10Gb NIC
-    instance_type: m5.4xlarge
+    # 8 cpus, x86, 32G mem, 10Gb NIC, $0.384/hr on demand
+    instance_type: m5.2xlarge
 
 worker_node_types:
     - name: worker_node
       # 8 cpus, x86, 32G mem, 10Gb NIC, $0.384/hr on demand
       instance_type: m5.2xlarge
-      min_workers: 1
+      min_workers: 5
       # 1k max replicas
       max_workers: 130
       use_spot: false
