--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -76,8 +76,8 @@ pexpect
 Pillow; platform_system != "Windows"
 pygments
 pyspark==3.1.2
-pytest<6
-pytest-asyncio
+pytest==5.4.3
+pytest-asyncio==0.16.0
 pytest-rerunfailures
 pytest-sugar
 pytest-lazy-fixture
