--- a/rllib/tuned_examples/cql/pendulum-cql.yaml
+++ b/rllib/tuned_examples/cql/pendulum-cql.yaml
@@ -7,7 +7,7 @@ pendulum-cql:
     run: CQL
     stop:
         evaluation/episode_reward_mean: -700
-        timesteps_total: 1000000
+        timesteps_total: 800000
     config:
         # Works for both torch and tf.
         framework: tf
@@ -22,7 +22,7 @@ pendulum-cql:
         twin_q: true
         train_batch_size: 2000
         bc_iters: 100
-        num_workers: 3
+        num_workers: 4
         min_time_s_per_iteration: 10
 
         metrics_smoothing_episodes: 5
