--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1561,6 +1561,20 @@ cc_test(
 )
 
 cc_test(
+    name = "memory_monitor_test",
+    size = "small",
+    srcs = [
+        "src/ray/common/test/memory_monitor_test.cc",
+    ],
+    copts = COPTS,
+    tags = ["team:core"],
+    deps = [
+        ":ray_common",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "pubsub_integration_test",
     timeout = "short",
     srcs = ["src/ray/pubsub/test/integration_test.cc"],
