--- a/doc/source/ray-air/examples/BUILD
+++ b/doc/source/ray-air/examples/BUILD
@@ -32,9 +32,9 @@ py_test_run_all_notebooks(
 
 py_test_run_all_notebooks(
     size = "large",
-    exclude = [ # REGRESSION!
-        "huggingface_text_classification.ipynb",
-        "torch_incremental_learning.ipynb"
+    exclude = [
+        "huggingface_text_classification.ipynb", # REGRESSION!
+        "torch_incremental_learning.ipynb" # REGRESSION!
     ],
     data = ["//doc/source/ray-air/examples:air_examples"],
     tags = ["exclusive", "team:ml", "gpu", "ray_air"],
