--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -185,7 +185,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_horovod_trainer.py"],
     tags = ["team:ml", "exclusive", "ray_air"],
-    deps = [":train_lib"]
+    deps = [":train_lib", "//python/ray/air:ml_lib"]
 )
 
 py_test(
@@ -377,4 +377,10 @@ py_test(
 py_library(
     name = "train_lib",
     srcs = glob(["**/*.py"], exclude=["tests/*.py"]),
+    visibility = [
+        "//python/ray/air:__pkg__",
+        "//python/ray/air:__subpackages__",
+        "//python/ray/train:__pkg__",
+        "//python/ray/train:__subpackages__",
+    ],
 )
