--- a/release/air_tests/air_benchmarks/xgboost_compute_tpl.yaml
+++ b/release/air_tests/air_benchmarks/xgboost_compute_tpl.yaml
@@ -15,6 +15,18 @@ worker_node_types:
       use_spot: false
 
 aws:
+  BlockDeviceMappings:
+  [
+    {
+      "DeviceName": "/dev/sda1",
+      "Ebs": {
+        "Iops": 5000,
+        "Throughput": 1000,
+        "VolumeSize": 1000,
+        "VolumeType": "gp3"
+      }
+    }
+  ],
   IamInstanceProfile:
     # Arn: arn:aws:iam::959243851260:instance-profile/ray-autoscaler-v1
     Arn: arn:aws:iam::188439194153:instance-profile/ray-autoscaler-v1
